<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorfff"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.io.east.district.login.LoginActivity">


    <include layout="@layout/layout_header" />


    <com.io.east.district.view.ClearEditText
        android:id="@+id/et_phone"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorfff"
        android:hint="@string/prompt_phone"
        android:inputType="number"
        android:maxLines="1"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:singleLine="true"
        android:textColor="@color/color_333"
        android:textColorHint="@color/hint_color"
        android:textSize="@dimen/text_size_15" />


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/underline_mg_top"
        android:background="#f2f2f2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/authcode"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:background="@color/colorfff"
            android:hint="@string/prompt_authcode"
            android:inputType="number"
            android:maxLines="1"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:singleLine="true"
            android:textColor="@color/color_333"
            android:textColorHint="@color/hint_color"
            android:textSize="@dimen/text_size_15" />


        <TextView
            android:id="@+id/tv_sendauth"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/send_authcode"
            android:textColor="@color/color_333"
            android:textSize="14dp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/underline_mg_top"
        android:background="#f2f2f2" />


    <com.io.east.district.view.PasswdEditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorfff"
        android:digits="@string/digits"
        android:drawableEnd="@mipmap/ic_eye_close"
        android:hint="@string/prompt_pa"
        android:imeActionId="6"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:singleLine="true"
        android:textColor="@color/color_333"
        android:textColorHint="@color/hint_color"
        android:textSize="@dimen/text_size_15" />


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/underline_mg_top"
        android:background="#f2f2f2" />


    <EditText
        android:id="@+id/Invitation_code"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorfff"
        android:digits="@string/digits"
        android:hint="@string/prompt_Invitation_code"
        android:imeActionId="6"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:inputType="text"
        android:maxLines="1"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:singleLine="true"
        android:textColor="@color/color_333"
        android:textColorHint="@color/hint_color"
        android:textSize="@dimen/text_size_15" />


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/underline_mg_top"
        android:background="#f2f2f2" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="10dp"
        android:background="@color/color_333"
        android:gravity="center"
        android:text="登录"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_15" />


    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="已注册，去登录"
        android:textColor="@color/color_333"
        android:textSize="@dimen/text_size_15" />


</LinearLayout>
