<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <ImageView
            android:id="@+id/iv_go_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:padding="10dp"
            android:src="@mipmap/go_back" />

        <TextView
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="修改密码"
            android:textColor="@color/color_333"
            android:textSize="18sp" />
    </RelativeLayout>





    <com.io.east.district.view.ClearEditText
        android:id="@+id/et_phone"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorfff"
        android:hint="@string/prompt_phone"
        android:inputType="number"
        android:maxLines="1"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:singleLine="true"
        android:textColor="@color/color_333"
        android:textColorHint="@color/hint_color"
        android:textSize="@dimen/text_size_15" />


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/underline_mg_top"
        android:background="#f2f2f2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/authcode"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:background="@color/colorfff"
            android:hint="@string/prompt_authcode"
            android:inputType="number"
            android:maxLines="1"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:singleLine="true"
            android:textColor="@color/color_333"
            android:textColorHint="@color/hint_color"
            android:textSize="@dimen/text_size_15" />


        <TextView
            android:id="@+id/tv_sendauth"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/send_authcode"
            android:textColor="@color/color_333"
            android:textSize="@dimen/text_size_15" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/underline_mg_top"
        android:background="#f2f2f2" />


    <com.io.east.district.view.PasswdEditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="30dp"
        android:background="@color/colorfff"
        android:digits="@string/digits"
        android:drawableEnd="@mipmap/ic_eye_close"
        android:hint="@string/prompt_pa"
        android:imeActionId="6"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:singleLine="true"
        android:textColor="@color/color_333"
        android:textColorHint="@color/hint_color"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/underline_mg_top"
        android:background="#f2f2f2" />

    <TextView
        android:id="@+id/tv_findpass"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="10dp"
        android:background="@color/color_333"
        android:gravity="center"
        android:text="确定"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_15" />

</LinearLayout>
