<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/test"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorfff"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.h.cheng.chain100.login.LoginActivity">


    <include layout="@layout/layout_header" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="35dp"
            android:paddingRight="35dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp">

                <AutoCompleteTextView
                    android:id="@+id/et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:background="@color/colorfff"
                    android:hint="@string/prompt_phone"
                    android:inputType="number"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorHint="#999999"
                    android:textSize="@dimen/edit_text_size" />

            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/underline_mg_top"
                android:background="#f2f2f2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7">

                    <EditText
                        android:id="@+id/authcode"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:background="@color/colorfff"
                        android:hint="@string/prompt_authcode"
                        android:inputType="number"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColorHint="#999999"
                        android:textSize="@dimen/edit_text_size" />

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/tv_sendauth"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="@string/send_authcode"
                    android:textColor="@color/titlecolor"
                    android:textSize="14dp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/underline_mg_top"
                android:background="#f2f2f2" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:background="@color/colorfff"
                        android:digits="@string/digits"
                        android:hint="@string/prompt_pa"
                        android:imeActionId="6"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textSize="@dimen/edit_text_size" />

                </android.support.design.widget.TextInputLayout>

                <ImageView
                    android:id="@+id/iv_eye"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/ic_eye" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/underline_mg_top"
                android:background="#f2f2f2" />


            <TextView
                android:id="@+id/tv_forget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="20dp"
                android:text="@string/forget_pa"
                android:textColor="#666666"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="70dp"
                android:background="@drawable/loginbtn_bg"
                android:gravity="center"
                android:text="立即登录"
                android:textColor="#6F4F2B"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/tv_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:textColor="#666666"
                android:textSize="14dp" />


        </LinearLayout>


    </ScrollView>
</LinearLayout>
